# slack9

./: .editorconfig  .envrc  .gitattributes  .gitignore  .slack9.toml  404.html  CONTRIBUTING.md  Cargo.toml  config.toml  flake.nix  index.html  lefthook.yml  mkdocs.yml  slack9s.toml  slackemon.toml  zensical.toml
.cargo/: config.toml
.cargo/zcc/: aarch64-apple-darwin.sh  aarch64-unknown-linux-musl.sh  cc.sh  x86_64-unknown-linux-musl.sh
.github/: CODEOWNERS  dependabot.yml  zizmor.yml
.github/actions/cache/: action.yml
.github/actions/commit-changes/: action.yml
.github/actions/commit-release/: action.yml
.github/actions/detect-changes/: action.yml
.github/actions/semver-label/: action.yml
.github/workflows/: build.yml  plan.yml  wildcard-action-validator.yml  wildcard-action.yml  wildcard-actionlint.yml  wildcard-brew.yml  wildcard-flake.yml  wildcard-github.yml  wildcard-mkdocs.yml  wildcard-nix.yml  wildcard-prettier.yml  wildcard-release-brew.yml  wildcard-release-github.yml  wildcard-release-nix.yml  wildcard-rs.yml  wildcard-rust.yml  wildcard-shellcheck.yml  wildcard-src.yml  wildcard-zensical.yml  wildcard-zizmor.yml
.release/: archive.sh  render.sh
.release/brew/: .gitignore  template.rb  values.sh
.release/nix/: .gitignore  template.nix  values.sh
docs/: README.md
search/: search_index.json
src/: app.rs  input.rs  main.rs  model.rs
src/cli/: mod.rs  style.rs
src/config/: mod.rs
src/exitcode/: mod.rs
src/slack/: api_log.rs  client.rs  mod.rs  types.rs
src/view/: channel_select.rs  command_bar.rs  filter_bar.rs  header.rs  header_logo.txt  logo_big.txt  logo_small.txt  message_list.rs  mod.rs  palette.rs  splash.rs  splash_logo.txt
tests/: main.rs
(+6 files in other folders)
