[package]
version = "0.5.4"

license = "MIT"
description = "🐵 Slack TUI to Track Your Mentions In Style!"
homepage = "https://anttiharju.dev/slack9/"
repository = "https://github.com/anttiharju/slack9"
readme = "docs/README.md"
name = "slack9"
edition = "2024"
include = ["src/**", "tests/**"]

[dependencies]
anstyle = "1.0"
clap = { version = "4.6", features = ["cargo", "derive"] }
crossterm = "0.29"
indexmap = { version = "2", features = ["serde"] }
ratatui = "0.30"
ureq = { version = "3.2", features = ["json"] }
jiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
termbg = "0.6.2"

[dev-dependencies]
assert_cmd = "2.2"
